--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ body {
   transform-style: preserve-3d;
   cursor: pointer;
   padding: 0 16.542vw 19.542vw 0;
+  margin: 7% 0;
 }
 
 .card_hover:hover {
@@ -149,7 +150,7 @@ body {
 }
 
 .ten {
-  width: 100%;
+  width: 90%;
   margin: 0 auto;
 }
 
