адаптация под моб. версию карт

--- a/adaptive.css
+++ b/adaptive.css
@@ -71,6 +71,22 @@
 .card-wrap__card {
   display: none;
   }
+
+
+
+.card_hover {
+    width: 31px;
+    height: 60px;
+ 
+}
+.ten {
+    width: 100%;
+}
+.flipped {
+  transform: rotateY(180deg);
+  width: 31px;
+  height: 60px;
+     }
 }
 
-
+ 
